[package]
name = "collossus"
version = "0.1.0"
authors = ["echnobas <60543166+echnobas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sync = ["collossus_sync"]

[workspace]
members = ["collossus_sync"]

[dependencies]
collossus_sync = { path = "collossus_sync", optional = true }