[package]
name = "collossus_sync"
version = "0.1.0"
authors = ["echnobas <60543166+echnobas@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
keywords = ["roblox", "roblox-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json","blocking","cookies"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
http = "0.2.1"